# claude-mcp-course

./: .gitignore  README.md
001-Introduction/: 001-Introducing-MCP.md  002-MCP-clients.md
002-Hands-on-with-MCP-Servers/: 001-Project-setup.md  002-Define-tools-in-MCP.md  003-The-server-inspector.md
003-Connecting-with-MCP-clients/: 001-Implementing-a-client.md  002-Defining-resources.md  003-Accessing-resources.md  004-Defining-prompts.md  005-Prompts-in-the-client.md  006-MCP-review.md
004-Advanced-Topics/: 001-Core-MCP-features.md  002-Log-and-progress-notifications.md  003-Roots.md  004-JSON-message-types.md  005-The-STDIO-transport.md  006-The-StreamableHTTP-transport.md  README.md
010-Introduction-to-agent-skills/: 001-What-are-skills.md  002-Creating-your-first-skill.md  003-Configuration-and-multi-file-skills.md  004-Skills-vs-other-Claude-Code-features.md  005-Sharing-skills.md  006-Troubleshooting-Skills.md  README.md
cli_project_mcp/: .env.example  .gitignore  README.md  mcp_client.py  mcp_server.py  uv.toml
transSum-server/: .env.example  .gitignore  README.md  main.py  minute.txt  pyproject.toml
transSum-server/src/transsum/: __init__.py  cli.py  config.py
transSum-server/src/transsum/mcp/: __init__.py  server.py
transSum-server/src/transsum/models/: __init__.py  anthropic_adapter.py  base.py  factory.py  ollama.py
transSum-server/src/transsum/processing/: __init__.py  chunker.py  loader.py  pipeline.py
transSum-server/tests/: __init__.py  test_chunker.py  test_config.py  test_models.py  test_pipeline.py
(+5 files in other folders)
